--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "apollo-server-hapi": "^1.3.2",
     "graphql": "^0.13.0",
     "graphql-tools": "^2.20.2",
-    "hapi": "^17.2.0"
+    "hapi": "^17.2.0",
+    "merge-graphql-schemas": "^1.4.0",
+    "mysql2": "^1.5.2",
+    "sequelize": "^4.33.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -26,13 +29,11 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx": "0.0.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
